[project]
name = "pdm-test"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Harry Pierson", email = "harry.pierson@dbos.dev"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
